2021-08-25  Wenson Hsieh  <wenson_hsieh@apple.com>

        Remove some iOS-specific compile-time guards that are no longer needed
        https://bugs.webkit.org/show_bug.cgi?id=229500

        Reviewed by Tim Horton.

        Remove the feature flags. See WebKit/ChangeLog for more details.

        * wtf/PlatformHave.h:
        * wtf/PlatformUse.h:

2021-08-24  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Add Intl Enumeration APIs
        https://bugs.webkit.org/show_bug.cgi?id=214795

        Reviewed by Ross Kirsling.

        * wtf/text/StringImpl.cpp:
        (WTF::StringImpl::createFromLiteral):
        * wtf/text/StringImpl.h:

2021-08-24  Tim Nguyen  <ntim@apple.com>

        Implement inert attribute behind feature flag
        https://bugs.webkit.org/show_bug.cgi?id=165279

        Reviewed by Chris Dumez.

        Add runtime InertAttributeEnabled feature flag disabled by default.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2021-08-21  Myles C. Maxfield  <mmaxfield@apple.com>

        overwriteCodePoint() in createAndFillGlyphPage() is wrong
        https://bugs.webkit.org/show_bug.cgi?id=215643
        <rdar://problem/67430461>

        Reviewed by Alan Bujtas.

        * wtf/unicode/CharacterNames.h:

2021-08-21  Sihui Liu  <sihui_liu@apple.com>

        IndexedDB: crash when triggering IDBOpenRequest completion back on a worker thread
        https://bugs.webkit.org/show_bug.cgi?id=229375

        Protect callee in CrossThreadTask if it inherits from ThreadSafeRefCounted<T>.

        Reviewed by Brady Eidson.

        * wtf/CrossThreadTask.h:

2021-08-20  Mark Lam  <mark.lam@apple.com>

        Make ptrTagName and tagForPtr WTF_EXPORT_PRIVATE.
        https://bugs.webkit.org/show_bug.cgi?id=229328

        Reviewed by Yusuke Suzuki.

        If ptrTagName and tagForPtr are defined, make them WTF_EXPORT_PRIVATE instead of
        static functions.  This allows us to call them from the debugger during