@@ -1,3 +1,12 @@
+2021-08-26  Risul Islam  <risul_islam@apple.com>
+
+        Add new experimental feature flag for sanitizing links
+        https://bugs.webkit.org/show_bug.cgi?id=229451
+
+        Reviewed by Kate Cheney.
+
+        * Scripts/Preferences/WebPreferencesExperimental.yaml:
+
 2021-08-25  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Remove some iOS-specific compile-time guards that are no longer needed
